--- a/index.html
+++ b/index.html
@@ -11,26 +11,39 @@
     <header>
         <nav>
             <div class="row nav-left">
-                <ul >
-                    <li><img src="img/logo-small.png" alt="Logo-small"></li>
-                    <li>Perchè Dropbox?</li>
-                    <li>Funzioni</li>
-                    <li>Piani e prezzi</li>
+                <ul>
+                    <li><a href="#"><img class="logo-small" src="img/logo-small.png" alt="Logo-small"></a></li>
+                    <li><a href="#">Perchè Dropbox?</a></li>
+                    <li><a href="#">Funzioni</a></li>
+                    <li><a href="#">Piani e prezzi</a></li>
                 </ul>
             </div>
 
             <div class="row nav-right">
                 <ul>
-                    <li>Supporto</li>
-                    <li>Contatta l'ufficio vendite</li>
-                    <li>Accedi</li>
-                    <li><a href="#">Inizia</a></li>
+                    <li><a href="#">Supporto</a></li>
+                    <li><a href="#">Contatta l'ufficio vendite</a></li>
+                    <li><a href="#">Accedi</a></li>
+                    <li><a class="inizia" href="#">Inizia</a></li>
                 </ul>
             </div>
         </nav>
     </header>
 
-    <main></main>
+    <main>
+        <article class="blue-bg">
+            <div class="container-large">
+                <h1>Tutto ciò che ti serve per il lavoro, in un unico posto.</h1>
+                <p class="col_4_9">Finalmente tutti i tuoi strumenti, contenuti e collaboratori sono accessibili
+                    dallo
+                    stesso posto. Dropbox
+                    Business è più di uno spazio di archiviazione sicuto: è un modo intelligente e integrato per
+                    ottimizare il
+                    flusso di lavoro esistente.</p>
+                <img class="col_5_9" src="img/jumbo.png" alt="jumbo">
+            </div>
+        </article>
+    </main>
     <footer></footer>
 
 </body>
