--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
 
 <head>
     <meta charset="UTF-8">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
     <title>Dropbox</title>
 </head>
@@ -24,24 +28,41 @@
                     <li><a href="#">Supporto</a></li>
                     <li><a href="#">Contatta l'ufficio vendite</a></li>
                     <li><a href="#">Accedi</a></li>
-                    <li><a class="inizia" href="#">Inizia</a></li>
+                    <li><a class="blue-btn" href="#">Inizia</a></li>
                 </ul>
             </div>
         </nav>
     </header>
 
     <main>
-        <article class="blue-bg">
+        <article class="first-article blue-bg">
             <div class="container-large">
                 <h1>Tutto ciò che ti serve per il lavoro, in un unico posto.</h1>
-                <p class="col_4_9">Finalmente tutti i tuoi strumenti, contenuti e collaboratori sono accessibili
-                    dallo
-                    stesso posto. Dropbox
-                    Business è più di uno spazio di archiviazione sicuto: è un modo intelligente e integrato per
-                    ottimizare il
-                    flusso di lavoro esistente.</p>
-                <img class="col_5_9" src="img/jumbo.png" alt="jumbo">
+                <div class="row">
+                    <div class="col_4_9">
+                        <p>Finalmente tutti i tuoi strumenti, contenuti e collaboratori sono accessibili
+                            dallo
+                            stesso posto. Dropbox
+                            Business è più di uno spazio di archiviazione sicuto: è un modo intelligente e integrato per
+                            ottimizare il
+                            flusso di lavoro esistente.</p>
+                        <div class="left-bottom">
+                            <a class="blue-btn" href="#">Inizia la tua prova gratuita</a>
+                        </div>
+                        <span>Annulla in qualsiasi momento</span>
+                        <div class="down-arrow">
+                            <span><i class="fas fa-arrow-down"></i></span>
+                        </div>
+                    </div>
+                    <div>
+                        <img class="col_5_9" src="img/jumbo.png" alt="jumbo">
+                    </div>
+                </div>
             </div>
+        </article>
+
+        <article>
+            
         </article>
     </main>
     <footer></footer>
