--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/second-article.css">
     <title>Dropbox</title>
 </head>
 
@@ -39,7 +40,7 @@
             <div class="container-large">
                 <h1>Tutto ciò che ti serve per il lavoro, in un unico posto.</h1>
                 <div class="row">
-                    <div class="col_4_9">
+                    <div class="col_3_9">
                         <p>Finalmente tutti i tuoi strumenti, contenuti e collaboratori sono accessibili
                             dallo
                             stesso posto. Dropbox
@@ -55,14 +56,48 @@
                         </div>
                     </div>
                     <div>
-                        <img class="col_5_9" src="img/jumbo.png" alt="jumbo">
+                        <img class="col_6_9" src="img/jumbo.png" alt="jumbo">
                     </div>
                 </div>
             </div>
         </article>
 
-        <article>
-            
+        <article class="second-article">
+            <div class="container">
+                <h2>Trova il tuo piano Dropbox Business che fa per te</h2>
+                <form>
+                    <input type="radio" id="f-mensile">
+                    <label for="f-mensile">Fatturazione mensile</label>
+                    <input type="radio" id="f-annuale">
+                    <label for="f-annuale">Fatturazione annuale</label>
+                </form>
+                <div class="row">
+                    <div class="col_3_9">
+                        <div class="internal-container">
+                            <div class="subtitle">Singolo</div>
+                            <div>
+                                <ul>
+                                    <li><h3>Professional</h3></li>
+                                    <li>€19,99</li>
+                                    <li>/mese</li>
+                                </ul>
+                                <ul>
+                                    <li>1 Utente</li>
+                                    <li>3 TBd di spazio di archivizione sicuro </li>
+                                    <li>Funzioni di produttività premium e condivisione file semplice e sicura</li>
+                                </ul>
+                                <div>
+                                    <a href="#">Prova gratis per 30 giorni</a>
+                                </div>
+                                <span>oppure acquista ora</span>
+                            </div>
+                        </div>
+                    </div>
+                    
+                </div>
+
+            </div>
+
         </article>
     </main>
     <footer></footer>
