--- a/index.html
+++ b/index.html
@@ -74,26 +74,137 @@
                 <div class="row">
                     <div class="col_3_9">
                         <div class="internal-container">
-                            <div class="subtitle">Singolo</div>
+                            <div class="list-subtitle">
+                                <div class="subtitle">Singolo</div>
+                            </div>
                             <div>
                                 <ul>
-                                    <li><h3>Professional</h3></li>
-                                    <li>€19,99</li>
+                                    <li>
+                                        <h3>Professional</h3>
+                                    </li>
+                                    <li><h4>€19,99</h4></li>
                                     <li>/mese</li>
+                                </ul>
+                                <ul>
+                                    <li>1 Utente</li>
+                                    <li>3 TB di spazio di archivizione sicuro </li>
+                                    <li>Funzioni di produttività premium e condivisione file semplice e sicura</li>
+                                </ul>
+                                <div class="btn-space">
+                                    <a class="blue-btn" href="#">Prova gratis per 30 giorni</a>
+                                </div>
+                                <span class="last-span">oppure <a href="#">acquista ora</a></span>
+
+                                <div class="last-list">
+
+                                    <h4>Punti salienti del piano</h4>
+                                    <ul>
+                                        <li><i class="fas fa-check"></i> Invia file fino a 100 GB con Dropbox Transfert</li>
+                                        <li><i class="fas fa-check"></i> Cartelle offline su dispositvi mobili</li>
+                                        <li><i class="fas fa-check"></i> Pulizia remota dell'account</li>
+                                        <li><i class="fas fa-check"></i> Filigrana documento</li>
+                                        <li><i class="fas fa-check"></i> Assistenza prioritaria via email e chat</li>
+                                </div>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col_3_9">
+                        <div class="internal-container">
+                            <div class="list-subtitle">
+                                <div class="subtitle">Team</div>
+                            </div>
+                            <div>
+                                <ul>
+                                    <li>
+                                        <h3>Standard</h3>
+                                    </li>
+                                    <li><h4>€19,99</h4></li>
+                                    <li>/utente / mese, a partire da 3 utenti</li>
                                 </ul>
                                 <ul>
                                     <li>1 Utente</li>
                                     <li>3 TBd di spazio di archivizione sicuro </li>
                                     <li>Funzioni di produttività premium e condivisione file semplice e sicura</li>
                                 </ul>
-                                <div>
-                                    <a href="#">Prova gratis per 30 giorni</a>
+                                <div class="btn-space">
+                                    <a class="blue-btn" href="#">Prova gratis per 30 giorni</a>
                                 </div>
-                                <span>oppure acquista ora</span>
+                                <span class="last-span">oppure <a href="#">acquista ora</a></span>
+
+                                <div class="last-list">
+
+                                    <h4>Punti salienti del piano</h4>
+                                    <ul>
+                                        <li><i class="fas fa-check"></i> Invia file fino a 100 GB con Dropbox Transfert</li>
+                                        <li><i class="fas fa-check"></i> Cartelle offline su dispositvi mobili</li>
+                                        <li><i class="fas fa-check"></i> Pulizia remota dell'account</li>
+                                        <li><i class="fas fa-check"></i> Filigrana documento</li>
+                                        <li><i class="fas fa-check"></i> Assistenza prioritaria via email e chat</li>
+                                        <li><i class="fas fa-check"></i> Assistenza prioritaria via email e chat</li>
+                                </div>
+                                </ul>
                             </div>
                         </div>
                     </div>
-                    
+
+                    <div class="col_3_9">
+                        <div class="internal-container">
+                            <div class="list-subtitle">
+                                <div class="subtitle">Team</div>
+                            </div>
+                            <div>
+                                <ul>
+                                    <li>
+                                        <h3>Advanced</h3>
+                                    </li>
+                                    <li><h4>€19,99</h4></li>
+                                    <li>/utente /mese, a partire da 3 utenti</li>
+                                </ul>
+                                <ul>
+                                    <li>1 Utente</li>
+                                    <li>3 TB di spazio di archivizione sicuro </li>
+                                    <li>Funzioni di produttività premium e condivisione file semplice e sicura</li>
+                                </ul>
+                                <div class="btn-space">
+                                    <a class="blue-btn" href="#">Prova gratis per 30 giorni</a>
+                                </div>
+                                <span class="last-span">oppure <a href="#">acquista ora</a></span>
+
+                                <div class="last-list">
+
+                                    <h4>Punti salienti del piano</h4>
+                                    <ul>
+                                        <li><i class="fas fa-check"></i> Invia file fino a 100 GB con Dropbox Transfert</li>
+                                        <li><i class="fas fa-check"></i> Cartelle offline su dispositvi mobili</li>
+                                        <li><i class="fas fa-check"></i> Pulizia remota dell'account</li>
+                                        <li><i class="fas fa-check"></i> Filigrana documento</li>
+                                        <li><i class="fas fa-check"></i> Assistenza prioritaria via email e chat</li>
+                                        <li><i class="fas fa-check"></i> Assistenza prioritaria via email e chat</li>
+                                </div>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="horizontal-container">
+                    <div class="horizontal-subtitle">
+                        <h3>Team</h3>
+                    </div>
+                    <div class="row">
+                        <div class="col_6_9">
+                            <h4>Enterprise</h4>
+                            <span>Contatta l'ufficio vendite per i prezzi</span>
+                            <span>Soluzioni personalizzate e supporto su misura per aiutare i professionisti IT nella gestione su qualsiasi scala.</span>
+                        </div>
+                        <div class="col_3_9">
+                            <a class="blue-btn" href="#">Contatta l'ufficio vendite</a>
+                        </div>
+
+
+                    </div>
+
                 </div>
 
             </div>
