third article done

--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/first-article.css">
     <link rel="stylesheet" href="css/second-article.css">
+    <link rel="stylesheet" href="css/third-article.css">
     <title>Dropbox</title>
 </head>
 
@@ -82,7 +83,9 @@
                                     <li>
                                         <h3>Professional</h3>
                                     </li>
-                                    <li><h4>€19,99</h4></li>
+                                    <li>
+                                        <h4>€19,99</h4>
+                                    </li>
                                     <li>/mese</li>
                                 </ul>
                                 <ul>
@@ -99,7 +102,8 @@
 
                                     <h4>Punti salienti del piano</h4>
                                     <ul>
-                                        <li><i class="fas fa-check"></i> Invia file fino a 100 GB con Dropbox Transfert</li>
+                                        <li><i class="fas fa-check"></i> Invia file fino a 100 GB con Dropbox Transfert
+                                        </li>
                                         <li><i class="fas fa-check"></i> Cartelle offline su dispositvi mobili</li>
                                         <li><i class="fas fa-check"></i> Pulizia remota dell'account</li>
                                         <li><i class="fas fa-check"></i> Filigrana documento</li>
@@ -120,7 +124,9 @@
                                     <li>
                                         <h3>Standard</h3>
                                     </li>
-                                    <li><h4>€19,99</h4></li>
+                                    <li>
+                                        <h4>€19,99</h4>
+                                    </li>
                                     <li>/utente / mese, a partire da 3 utenti</li>
                                 </ul>
                                 <ul>
@@ -137,7 +143,8 @@
 
                                     <h4>Punti salienti del piano</h4>
                                     <ul>
-                                        <li><i class="fas fa-check"></i> Invia file fino a 100 GB con Dropbox Transfert</li>
+                                        <li><i class="fas fa-check"></i> Invia file fino a 100 GB con Dropbox Transfert
+                                        </li>
                                         <li><i class="fas fa-check"></i> Cartelle offline su dispositvi mobili</li>
                                         <li><i class="fas fa-check"></i> Pulizia remota dell'account</li>
                                         <li><i class="fas fa-check"></i> Filigrana documento</li>
@@ -159,7 +166,9 @@
                                     <li>
                                         <h3>Advanced</h3>
                                     </li>
-                                    <li><h4>€19,99</h4></li>
+                                    <li>
+                                        <h4>€19,99</h4>
+                                    </li>
                                     <li>/utente /mese, a partire da 3 utenti</li>
                                 </ul>
                                 <ul>
@@ -176,7 +185,8 @@
 
                                     <h4>Punti salienti del piano</h4>
                                     <ul>
-                                        <li><i class="fas fa-check"></i> Invia file fino a 100 GB con Dropbox Transfert</li>
+                                        <li><i class="fas fa-check"></i> Invia file fino a 100 GB con Dropbox Transfert
+                                        </li>
                                         <li><i class="fas fa-check"></i> Cartelle offline su dispositvi mobili</li>
                                         <li><i class="fas fa-check"></i> Pulizia remota dell'account</li>
                                         <li><i class="fas fa-check"></i> Filigrana documento</li>
@@ -194,9 +204,10 @@
                     </div>
                     <div class="row">
                         <div class="col_6_9">
-                            <h4>Enterprise</h4>
-                            <span>Contatta l'ufficio vendite per i prezzi</span>
-                            <span>Soluzioni personalizzate e supporto su misura per aiutare i professionisti IT nella gestione su qualsiasi scala.</span>
+                            <h2>Enterprise</h2>
+                            <h3>Contatta l'ufficio vendite per i prezzi</h3>
+                            <span>Soluzioni personalizzate e supporto su misura per aiutare i professionisti IT nella
+                                gestione su qualsiasi scala.</span>
                         </div>
                         <div class="col_3_9">
                             <a class="blue-btn" href="#">Contatta l'ufficio vendite</a>
@@ -207,6 +218,28 @@
 
                 </div>
 
+            </div>
+
+        </article>
+
+        <article class="third-article">
+            <div class="container">
+                <div class="row">
+                    <div class="col_5_9">
+                        <img src="img/partner.png" alt="Partner">
+                    </div>
+
+                    <div class="col_4_9 txt-container">
+                        <h2>Entra in contatto con un partner Dropbox</h2>
+                        <p>Trova un partner Dropbox e HelloSignd di ficucia. Ottienil e soluzionie i servizi necessari
+                            per
+                            raggiungere i tuoi obiettivi aziendali, tra cui implementazione, integrazione, gestione e
+                            supporto continui.</p>
+                        <div class="button">
+                            <a href="#">Trova un partner</a>
+                        </div>
+                    </div>
+                </div>
             </div>
 
         </article>
