fourth article done

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="css/first-article.css">
     <link rel="stylesheet" href="css/second-article.css">
     <link rel="stylesheet" href="css/third-article.css">
+    <link rel="stylesheet" href="css/fourth-article.css">
     <title>Dropbox</title>
 </head>
 
@@ -242,6 +243,88 @@
                 </div>
             </div>
 
+        </article>
+
+        <article class="fourth-article">
+            <div class="container">
+                <h2>Esegui più operazioni con Dropbox Business</h2>
+                <div class="row">
+                    <div class="col_3_9">
+                        <div class="int-container">
+                            <div>
+                                <img src="img/1.png" alt="image">
+                            </div>
+                            <h3>Passa di meno da uno strumento all'altro</h3>
+                            <p>Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi
+                                contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e
+                                <a href="#">Dropbox Paper</a> direttamente da Dropbox.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="col_3_9">
+                        <div class="int-container">
+                            <div>
+                                <img src="img/2.png" alt="imaage">
+                            </div>
+                            <h3>Passa di meno da uno strumento all'altro</h3>
+                            <p>Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi
+                                contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e
+                                <span>Dropbox Paper</span> direttamente da Dropbox.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="col_3_9">
+                        <div class="int-container">
+                            <div>
+                                <img src="img/3.png" alt="imaage">
+                            </div>
+                            <h3>Passa di meno da uno strumento all'altro</h3>
+                            <p>Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi
+                                contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e
+                                <span>Dropbox Paper</span> direttamente da Dropbox.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="col_3_9">
+                        <div class="int-container">
+                            <div>
+                                <img src="img/4.png" alt="imaage">
+                            </div>
+                            <h3>Passa di meno da uno strumento all'altro</h3>
+                            <p>Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi
+                                contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e
+                                <span>Dropbox Paper</span> direttamente da Dropbox.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="col_3_9">
+                        <div class="int-container">
+                            <div>
+                                <img src="img/5.png" alt="imaage">
+                            </div>
+                            <h3>Passa di meno da uno strumento all'altro</h3>
+                            <p>Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi
+                                contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e
+                                <span>Dropbox Paper</span> direttamente da Dropbox.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="col_3_9">
+                        <div class="int-container">
+                            <div>
+                                <img src="img/6.png" alt="imaage">
+                            </div>
+                            <h3>Passa di meno da uno strumento all'altro</h3>
+                            <p>Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi
+                                contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e
+                                <span>Dropbox Paper</span> direttamente da Dropbox.
+                            </p>
+                        </div>
+                    </div>
+
+                </div>
+
+            </div>
         </article>
     </main>
     <footer></footer>
