fifth article done

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="css/second-article.css">
     <link rel="stylesheet" href="css/third-article.css">
     <link rel="stylesheet" href="css/fourth-article.css">
+    <link rel="stylesheet" href="css/fifth-article.css">
     <title>Dropbox</title>
 </head>
 
@@ -325,6 +326,87 @@
                 </div>
 
             </div>
+        </article>
+
+        <article class="fifth-article">
+            <div class="container">
+                <h2>Più di 500.000 team utilizzano Dropbox Business</h2>
+                <div class="link-container">
+                    <a href="#">Scopri di più sui nostri clienti</a>
+                </div>
+            </div>
+            <div class="row">
+                <div class="square left">
+                    <div class="row">
+                        <div class="small-square" style="background-color: #A2D39C;">
+                            <div class="img-container">
+                                <img src="img/designit.svg" alt="prima">
+                            </div>
+                        </div>
+                        <div class="small-square" style="background-color: #61082C;">
+                            <div class="img-container">
+                                <img src="img/arizona_state_university.svg" alt="Arizona">
+                            </div>
+                        </div>
+                        <div class="small-square" style="background-color: #0093CE;">
+                            <div class="img-container">
+                                <img src="img/university_of_florida.svg" alt="Florida">
+                            </div>
+                        </div>
+                        <div class="small-square" style="background-color: #FF1C1D;">
+                            <div class="img-container">
+                                <img src="img/topps.svg" alt="topps">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- Middle Square -->
+                <div class="square middle">
+                    <div class="int-container">
+                        <div>
+                            <img src="img/designit.svg" alt="design">
+                        </div>
+                        <div class="txt-container">
+                            <p>"I membri del nostro team lavorano costantemente in Paesi, fusi orari e uffici diversi.
+                                Ora
+                                molte soluzioni sono compatibili con queste esigenze, ma nessuna è facile quanto Dropbox
+                                e
+                                Dropbox Paper. Ora molte soluzioni sono compatibili con queste esigenze, ma nessuna è
+                                facile
+                                quanto Dropbox Paper".</p>
+                            <span>Morten Thomsen, Global IT Lead</span>
+                        </div>
+                    </div>
+                </div>
+                <!-- End Middle Square -->
+
+                <div class="square right">
+                    <div class="row">
+                        <div class="small-square" style="background-color: #D50020;">
+                            <div class="img-container">
+                                <img src="img/world_bicycle_relief.svg" alt="Florida">
+                            </div>
+                        </div>
+                        <div class="small-square" style="background-color: #B4D0E7;">
+                            <div class="img-container">
+                                <img src="img/hearst_corp.svg" alt="Florida">
+                            </div>
+                        </div>
+                        <div class="small-square" style="background-color: #0D2481;">
+                            <div class="img-container">
+                                <img src="img/lonely_planet.svg" alt="Florida">
+                            </div>
+                        </div>
+                        <div class="small-square" style="background-color: #FFD831;">
+                            <div class="img-container">
+                                <img src="img/clear_channel.svg" alt="Florida">
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+
         </article>
     </main>
     <footer></footer>
