--- a/index.html
+++ b/index.html
@@ -402,7 +402,15 @@
                                 <img src="img/clear_channel.svg" alt="Florida">
                             </div>
                         </div>
+                    </div>
+                </div>
+            </div>
 
+            <div class="under-squares">
+                <div class="row container">
+                    <h2 class="col_3_9">Porta Dropbox Business nella tua azienda.</h2>
+                    <div class="btn">
+                        <a class="col_3_9" href="#">Inizia la tua prova gratuita</a>
                     </div>
                 </div>
             </div>
