--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="css/third-article.css">
     <link rel="stylesheet" href="css/fourth-article.css">
     <link rel="stylesheet" href="css/fifth-article.css">
+    <link rel="stylesheet" href="css/sixth-article.css">
     <title>Dropbox</title>
 </head>
 
@@ -415,6 +416,30 @@
                 </div>
             </div>
 
+        </article>
+
+        <article class="sixth-article">
+            <div class="container">
+                <h3>Domande Frequenti</h3>
+                <ul>
+                    <li class="row">
+                        <h5>Qual'è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</h5>
+                        <a class="row-faq"><i class="fas fa-angle-down"></i></a>
+                    </li>
+                    <li class="row">
+                        <h5>Qual'è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</h5>
+                        <a class="row-faq"><i class="fas fa-angle-down"></i></a>
+                    </li>
+                    <li class="row">
+                        <h5>Qual'è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</h5>
+                        <a class="row-faq"><i class="fas fa-angle-down"></i></a>
+                    </li>
+                    <li class="row">
+                        <h5>Qual'è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</h5>
+                        <a class="row-faq"><i class="fas fa-angle-down"></i></a>
+                    </li>
+                </ul>
+            </div>
         </article>
     </main>
     <footer></footer>
