--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="css/fourth-article.css">
     <link rel="stylesheet" href="css/fifth-article.css">
     <link rel="stylesheet" href="css/sixth-article.css">
+    <link rel="stylesheet" href="css/footer.css">
     <title>Dropbox</title>
 </head>
 
@@ -442,7 +443,57 @@
             </div>
         </article>
     </main>
-    <footer></footer>
+
+    <footer>
+        <div class="container-large">
+            <div class="row">
+                <ul class="col-footer">
+                    <h4>Dropbox</h4>
+                    <li>Applicazione desktop</li>
+                    <li>Perchè Dropbox</li>
+                    <li>Piani</li>
+                    <li>Sicurezza</li>
+                    <li>Funzioni</li>
+                </ul>
+                <ul class="col-footer">
+                    <h4>Prodotti</h4>
+                    <li>Applicazione desktop</li>
+                    <li>Perchè Dropbox</li>
+                    <li>Piani</li>
+                    <li>Sicurezza</li>
+                    <li>Funzioni</li>
+                </ul>
+                <ul class="col-footer">
+                    <h4>Azienda</h4>
+                    <li>Applicazione desktop</li>
+                    <li>Perchè Dropbox</li>
+                    <li>Piani</li>
+                    <li>Sicurezza</li>
+                    <li>Funzioni</li>
+                </ul>
+                <ul class="col-footer">
+                    <h4>Supporto</h4>
+                    <li>Applicazione desktop</li>
+                    <li>Perchè Dropbox</li>
+                    <li>Piani</li>
+                    <li>Sicurezza</li>
+                    <li>Funzioni</li>
+                </ul>
+                <ul class="col-footer">
+                    <h4>Community</h4>
+                    <li>Applicazione desktop</li>
+                    <li>Perchè Dropbox</li>
+                    <li>Piani</li>
+                    <li>Sicurezza</li>
+                    <li>Funzioni</li>
+                </ul>
+            </div>
+            <div class="language">
+                <span><i class="fas fa-globe-americas"></i> Italiano <i class="fas fa-caret-up"></i></span>
+            </div>
+        </div>
+
+    </footer>
 
 </body>
 
