Done (without animations)

--- a/index.html
+++ b/index.html
@@ -80,9 +80,9 @@
                     <div class="col_3_9">
                         <div class="internal-container">
                             <div class="list-subtitle">
-                                <div class="subtitle">Singolo</div>
+                                <div class="subtitle"><i class="far fa-user"></i> Singolo</div>
                             </div>
-                            <div>
+                            <div class="internal-container-content">
                                 <ul>
                                     <li>
                                         <h3>Professional</h3>
@@ -92,28 +92,32 @@
                                     </li>
                                     <li>/mese</li>
                                 </ul>
-                                <ul>
-                                    <li>1 Utente</li>
-                                    <li>3 TB di spazio di archivizione sicuro </li>
-                                    <li>Funzioni di produttività premium e condivisione file semplice e sicura</li>
+                                <ul class="list-with-icons">
+                                    <li><i class="far fa-user"></i>1 Utente</li>
+                                    <li><i class="far fa-folder"></i>3 TB di spazio di archivizione sicuro </li>
+                                    <li><i class="fas fa-pencil-alt"></i>Funzioni di produttività premium e
+                                        condivisione file semplice e sicura</li>
                                 </ul>
                                 <div class="btn-space">
                                     <a class="blue-btn" href="#">Prova gratis per 30 giorni</a>
                                 </div>
                                 <span class="last-span">oppure <a href="#">acquista ora</a></span>
-
+                                <div class="border"></div>
                                 <div class="last-list">
-
                                     <h4>Punti salienti del piano</h4>
                                     <ul>
-                                        <li><i class="fas fa-check"></i> Invia file fino a 100 GB con Dropbox Transfert
+                                        <li>
+                                            <span><i class="fas fa-check"></span></i>
+                                            Invia file fino a 100 GB con Dropbox Transfert
                                         </li>
-                                        <li><i class="fas fa-check"></i> Cartelle offline su dispositvi mobili</li>
-                                        <li><i class="fas fa-check"></i> Pulizia remota dell'account</li>
-                                        <li><i class="fas fa-check"></i> Filigrana documento</li>
-                                        <li><i class="fas fa-check"></i> Assistenza prioritaria via email e chat</li>
+                                        <li><span><i class="fas fa-check"></i> Cartelle offline su dispositvi
+                                                mobili</span></li>
+                                        <li><span><i class="fas fa-check"></i> Pulizia remota dell'account</span></li>
+                                        <li><span><i class="fas fa-check"></i> Filigrana documento</span></li>
+                                        <li><span><i class="fas fa-check"></i> Assistenza prioritaria via email e
+                                                chat</span></li>
+                                    </ul>
                                 </div>
-                                </ul>
                             </div>
                         </div>
                     </div>
@@ -121,9 +125,9 @@
                     <div class="col_3_9">
                         <div class="internal-container">
                             <div class="list-subtitle">
-                                <div class="subtitle">Team</div>
+                                <div class="subtitle"><i class="far fa-building"></i> Team</div>
                             </div>
-                            <div>
+                            <div class="internal-container-content">
                                 <ul>
                                     <li>
                                         <h3>Standard</h3>
@@ -133,29 +137,35 @@
                                     </li>
                                     <li>/utente / mese, a partire da 3 utenti</li>
                                 </ul>
-                                <ul>
-                                    <li>1 Utente</li>
-                                    <li>3 TBd di spazio di archivizione sicuro </li>
-                                    <li>Funzioni di produttività premium e condivisione file semplice e sicura</li>
+                                <ul class="list-with-icons">
+                                    <li><i class="fas fa-user-plus"></i>1 Utente</li>
+                                    <li><i class="far fa-folder"></i>3 TB di spazio di archivizione sicuro </li>
+                                    <li><i class="far fa-smile"></i>Funzioni di produttività premium e
+                                        condivisione file semplice e sicura</li>
                                 </ul>
                                 <div class="btn-space">
                                     <a class="blue-btn" href="#">Prova gratis per 30 giorni</a>
                                 </div>
                                 <span class="last-span">oppure <a href="#">acquista ora</a></span>
-
+                                <div class="border"></div>
                                 <div class="last-list">
-
                                     <h4>Punti salienti del piano</h4>
                                     <ul>
-                                        <li><i class="fas fa-check"></i> Invia file fino a 100 GB con Dropbox Transfert
+                                        <li>
+                                            <span><i class="fas fa-check"></span></i>
+                                            Invia file fino a 100 GB con Dropbox Transfert
                                         </li>
-                                        <li><i class="fas fa-check"></i> Cartelle offline su dispositvi mobili</li>
-                                        <li><i class="fas fa-check"></i> Pulizia remota dell'account</li>
-                                        <li><i class="fas fa-check"></i> Filigrana documento</li>
-                                        <li><i class="fas fa-check"></i> Assistenza prioritaria via email e chat</li>
-                                        <li><i class="fas fa-check"></i> Assistenza prioritaria via email e chat</li>
+                                        <li><span><i class="fas fa-check"></i> Cartelle offline su dispositvi
+                                                mobili</span></li>
+                                        <li><span><i class="fas fa-check"></i> Pulizia remota dell'account</span></li>
+                                        <li><span><i class="fas fa-check"></i> Filigrana documento</span></li>
+                                        <li><span><i class="fas fa-check"></i> Assistenza prioritaria via email e
+                                                chat</span></li>
+                                        <li><span><i class="fas fa-check"></i> Assistenza prioritaria via email e
+                                                chat</span></li>
+
+                                    </ul>
                                 </div>
-                                </ul>
                             </div>
                         </div>
                     </div>
@@ -163,9 +173,9 @@
                     <div class="col_3_9">
                         <div class="internal-container">
                             <div class="list-subtitle">
-                                <div class="subtitle">Team</div>
+                                <div class="subtitle"><i class="far fa-building"></i> Team</div>
                             </div>
-                            <div>
+                            <div class="internal-container-content">
                                 <ul>
                                     <li>
                                         <h3>Advanced</h3>
@@ -173,34 +183,41 @@
                                     <li>
                                         <h4>€19,99</h4>
                                     </li>
-                                    <li>/utente /mese, a partire da 3 utenti</li>
+                                    <li>/utente / mese, a partire da 3 utenti</li>
                                 </ul>
-                                <ul>
-                                    <li>1 Utente</li>
-                                    <li>3 TB di spazio di archivizione sicuro </li>
-                                    <li>Funzioni di produttività premium e condivisione file semplice e sicura</li>
+                                <ul class="list-with-icons">
+                                    <li><i class="fas fa-user-plus"></i>1 Utente</li>
+                                    <li><i class="far fa-smile"></i>3 TB di spazio di archivizione sicuro </li>
+                                    <li><i class="fas fa-pencil-alt"></i>Funzioni di produttività premium e
+                                        condivisione file semplice e sicura</li>
                                 </ul>
                                 <div class="btn-space">
                                     <a class="blue-btn" href="#">Prova gratis per 30 giorni</a>
                                 </div>
                                 <span class="last-span">oppure <a href="#">acquista ora</a></span>
-
+                                <div class="border"></div>
                                 <div class="last-list">
-
                                     <h4>Punti salienti del piano</h4>
                                     <ul>
-                                        <li><i class="fas fa-check"></i> Invia file fino a 100 GB con Dropbox Transfert
+                                        <li>
+                                            <span><i class="fas fa-check"></span></i>
+                                            Invia file fino a 100 GB con Dropbox Transfert
                                         </li>
-                                        <li><i class="fas fa-check"></i> Cartelle offline su dispositvi mobili</li>
-                                        <li><i class="fas fa-check"></i> Pulizia remota dell'account</li>
-                                        <li><i class="fas fa-check"></i> Filigrana documento</li>
-                                        <li><i class="fas fa-check"></i> Assistenza prioritaria via email e chat</li>
-                                        <li><i class="fas fa-check"></i> Assistenza prioritaria via email e chat</li>
+                                        <li><span><i class="fas fa-check"></i> Cartelle offline su dispositvi
+                                                mobili</span></li>
+                                        <li><span><i class="fas fa-check"></i> Pulizia remota dell'account</span></li>
+                                        <li><span><i class="fas fa-check"></i> Filigrana documento</span></li>
+                                        <li><span><i class="fas fa-check"></i> Assistenza prioritaria via email e
+                                                chat</span></li>
+                                        <li><span><i class="fas fa-check"></i> Assistenza prioritaria via email e
+                                                chat</span></li>
+                                    </ul>
                                 </div>
-                                </ul>
                             </div>
                         </div>
                     </div>
+
+
                 </div>
                 <div class="horizontal-container">
                     <div class="horizontal-subtitle">
@@ -484,11 +501,10 @@
                     <li>Applicazione desktop</li>
                     <li>Perchè Dropbox</li>
                     <li>Piani</li>
-                    <li>Sicurezza</li>
-                    <li>Funzioni</li>
                 </ul>
             </div>
             <div class="language">
+                <div class="min-border"></div>
                 <span><i class="fas fa-globe-americas"></i> Italiano <i class="fas fa-caret-up"></i></span>
             </div>
         </div>
